# easy-image-labeling

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: build_and_publish_testpypi.yml
easy_image_labeling/: __init__.py  config.py  dataset_manager.py  forms.py  main.py  result_writers.py
easy_image_labeling/db/: db.py
easy_image_labeling/pages/: classify.py  config.py  export.py  selection.py
easy_image_labeling/plotlydash/assets/: dash_style.css
easy_image_labeling/plotlydash/components/: ids.py  layout.py
easy_image_labeling/plotlydash/data/: data_loader.py
easy_image_labeling/static/: style.css
easy_image_labeling/templates/: _formhelpers.html  base.html  class_names.html  class_number.html  classification_summary.html  classify_image.html  index.html  upload_dataset.html
tests/: conftest.py
tests/functional/: test_manage_datasets.py
tests/unit/: test_database.py
